CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET (TARGET_NAME bgr_yuv_interturn)
PROJECT(${TARGET_NAME})

ADD_DEFINITIONS(-std=c++11)
# ---[ Output path
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

FIND_PACKAGE( OpenCV REQUIRED )

# Set include path
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS}
    ${CMAKE_CURRENT_SOURCE_DIR}
	)

# unit test
ADD_EXECUTABLE(${TARGET_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp)
TARGET_LINK_LIBRARIES(${TARGET_NAME} 
    ${OpenCV_LIBS}
    )